welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.error
Program:4: error: illegal start of simple expression
}
^Program:7: error: 'while' expected but '}' found.
	}
        ^